--- a/packages/create-v2-addon-repo/src/blueprints/test-app/app/styles/app.css
+++ b/packages/create-v2-addon-repo/src/blueprints/test-app/app/styles/app.css
@@ -1,1 +1,4 @@
-/* Ember supports plain CSS out of the box. More info: https://cli.emberjs.com/release/advanced-use/stylesheets/ */
+html {
+  font-size: 16px;
+  height: 100%;
+}
