--- a/packages/create-v2-addon-repo/tests/fixtures/typescript/output/my-repo/test-app/app/templates/application.hbs
+++ b/packages/create-v2-addon-repo/tests/fixtures/typescript/output/my-repo/test-app/app/templates/application.hbs
@@ -1,5 +1,9 @@
 {{page-title "test-app"}}
 
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<div>
+  <main>
+    <div>
+      {{outlet}}
+    </div>
+  </main>
+</div>
